--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -2100,8 +2100,17 @@ paths:
                     - nurse
                     - dietician
                     - ob-gyn
-                  description: The default care team role that tasks should be assigned to.
+                  description: The default care team role that tasks should be assigned to. This
+                    field is being deprecated in favor of care_team_role - until
+                    that work is complete you must supply both fields.
                   example: nurse
+                care_team_role:
+                  type: string
+                  nullable: true
+                  description: The ID of the care team role that tasks should be assigned to be
+                    default. If no role is set on the task definition, any tasks
+                    created without explicit assignment will remain unassigned.
+                  example: ctr_iNGhmxf28QqEstlwzxWK
               required:
                 - key
                 - name
@@ -2243,8 +2252,17 @@ paths:
                     - nurse
                     - dietician
                     - ob-gyn
-                  description: The default care team role that tasks should be assigned to.
+                  description: The default care team role that tasks should be assigned to. This
+                    field is being deprecated in favor of care_team_role - until
+                    that work is complete you must supply both fields.
                   example: nurse
+                care_team_role:
+                  type: string
+                  nullable: true
+                  description: The ID of the care team role that tasks should be assigned to be
+                    default. If no role is set on the task definition, any tasks
+                    created without explicit assignment will remain unassigned.
+                  example: ctr_iNGhmxf28QqEstlwzxWK
       responses:
         default:
           description: Successful response.
@@ -4369,8 +4387,21 @@ components:
             - nurse
             - dietician
             - ob-gyn
-          description: The default care team role that tasks should be assigned to.
+          description: The default care team role that tasks should be assigned to. This
+            field is being deprecated in favor of care_team_role, until that
+            work is complete you must supply both fields.
           example: nurse
+        care_team_role:
+          oneOf:
+            - type: string
+            - $ref: "#/components/schemas/care_team_role"
+          x-expandable:
+            $ref: "#/components/schemas/care_team_role"
+          description: The default care team role that tasks should be assigned to. If no
+            role is set on the task definition, any tasks created without
+            explicit assignment will remain unassigned.
+          example: ctr_iNGhmxf28QqEstlwzxWK
+          nullable: true
         created_at:
           type: string
           format: date-time
@@ -4387,6 +4418,7 @@ components:
         - key
         - name
         - participant_role
+        - care_team_role
         - created_at
         - updated_at
       title: Task Definition
