--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -121,19 +121,11 @@ paths:
                     properties:
                       user:
                         type: string
-                        description: Unique ID of the user to add to the care team.
+                        description: Unique ID of the user to add to the care team. The user must have a
+                          care team role defined.
                         example: usr_NC6MQ3FyxddKoJJpfSVL
-                      role:
-                        type: string
-                        enum:
-                          - clinician
-                          - nurse
-                          - dietician
-                          - ob-gyn
-                        description: Role that this user should have on the care team.
                     required:
                       - user
-                      - role
                   description: List of users to put on the care team.
       responses:
         default:
@@ -2093,17 +2085,6 @@ paths:
                   type: string
                   description: Human readable name of the task definition
                   example: Medication Request
-                participant_role:
-                  type: string
-                  enum:
-                    - clinician
-                    - nurse
-                    - dietician
-                    - ob-gyn
-                  description: The default care team role that tasks should be assigned to. This
-                    field is being deprecated in favor of care_team_role - until
-                    that work is complete you must supply both fields.
-                  example: nurse
                 care_team_role:
                   type: string
                   nullable: true
@@ -2114,7 +2095,6 @@ paths:
               required:
                 - key
                 - name
-                - participant_role
       responses:
         default:
           description: Successful response.
@@ -2245,17 +2225,6 @@ paths:
                   type: string
                   description: Human readable name of the task definition
                   example: Medication Request
-                participant_role:
-                  type: string
-                  enum:
-                    - clinician
-                    - nurse
-                    - dietician
-                    - ob-gyn
-                  description: The default care team role that tasks should be assigned to. This
-                    field is being deprecated in favor of care_team_role - until
-                    that work is complete you must supply both fields.
-                  example: nurse
                 care_team_role:
                   type: string
                   nullable: true
@@ -3207,21 +3176,12 @@ components:
                   - $ref: "#/components/schemas/user"
                 x-expandable:
                   $ref: "#/components/schemas/user"
-                description: The users who is on the care team.
+                description: The user who is on the care team.
                 example: usr_NC6MQ3FyxddKoJJpfSVL
-              role:
-                type: string
-                enum:
-                  - clinician
-                  - nurse
-                  - dietician
-                  - ob-gyn
-                description: The role of this user on the care team.
             required:
               - user
-              - role
-          description: The users on the care team. Each user has an associated role on the
-            care team (for example, nurse, endocrinologist, or health ally).
+          description: The users on the care team. The user's care team role defines their
+            role across all teams they are on.
           example: []
         created_at:
           type: string
@@ -4380,17 +4340,6 @@ components:
           type: string
           description: Human readable name of the task definition.
           example: Follow Up
-        participant_role:
-          type: string
-          enum:
-            - clinician
-            - nurse
-            - dietician
-            - ob-gyn
-          description: The default care team role that tasks should be assigned to. This
-            field is being deprecated in favor of care_team_role, until that
-            work is complete you must supply both fields.
-          example: nurse
         care_team_role:
           oneOf:
             - type: string
@@ -4417,7 +4366,6 @@ components:
         - id
         - key
         - name
-        - participant_role
         - care_team_role
         - created_at
         - updated_at
